fixed the glitch and got rid of white spaces

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0px;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: gray;
@@ -6,6 +10,7 @@ body {
 p {
   font-weight: bold;
   font-size: 1.2rem;
+  margin: 40px 0 20px 0;
 }
 
 .container {
